import groovy.json.JsonOutput
import groovy.json.JsonSlurper
import net.minecraftforge.gradle.common.tasks.SignJar
import org.gradle.work.Incremental

plugins {
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '6.0.+'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.spongepowered.mixin' version '0.7.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.6'
    id 'eclipse'
}

def versionProps = new Properties()
file('version.properties').withInputStream { versionProps.load(it) }

version = versionProps.getProperty('version')
ext.version_buildnumber = versionProps.getProperty('build_number')?.toInteger() ?: 0

println "-> build.gradle applying version: $version (build ${version_buildnumber})"

gradle.taskGraph.whenReady { graph ->
    // Only bump build number when doing a full build
    if (graph.hasTask(':build')) {
        ext.version_buildnumber = gradle.ext.nextBuildNumber
    } else {
        // preserve existing build number for non-build tasks
        ext.version_buildnumber = project.findProperty('version_buildnumber') ?: 0
    }
}

version = '0.1.0-a' + version_buildnumber
group = 'mctmods.immersivetechnology'
archivesBaseName = 'immersivetechnology'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)
jar.enabled = true
tasks.withType(Jar) {
    // Enable ZIP64 for regular Jar task
    zip64 true
}

version = gradle.ext.nextVersion

sourceSets {
    main {
        resources {
            srcDirs = [
                    "$rootDir/src/main/resources",
                    "$rootDir/src/generated/resources",
            ]
        }
    }
    datagen {
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
    gametest {
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}

ext {
    modid = 'immersivetechnology'
    version_minecraft = versionProps['mc_version']
    version_forge = versionProps['forge_version']
    version_jei = versionProps['jei_version']
    version_parchment = versionProps['version_parchment']
    version_ie = versionProps['version_ie']
    version_ig = versionProps['version_ig']
    mod_license = versionProps['mod_license']
    mod_name = versionProps['mod_name']
    mod_authors = versionProps['mod_authors']
    mod_description = versionProps['mod_description']
}

def version_replaces = [
        'version'      : project.version,
        'build_number' : version_buildnumber,
        'mc_version'   : version_minecraft,
        'forge_version': version_forge,
        'jei_version'  : version_jei,
        'mod_license'  : mod_license,
        'mod_name'     : mod_name,
        'mod_authors'  : mod_authors,
        'mod_description': mod_description,
        'version_ie'   : version_ie,
        'version_ig'   : version_ig
]

def jsonPatterns = ["**/*.json", "**/*.mcmeta"]

processResources {
    duplicatesStrategy = DuplicatesStrategy.FAIL
    inputs.properties(version_replaces)
    filesMatching("META-INF/mods.toml") {
        expand version_replaces
    }
    exclude ".cache"
    //Minify json resources
    doLast {
        fileTree(dir: getOutputs().getFiles().getAsPath(), includes: jsonPatterns).each {
            File file -> file.setText(JsonOutput.toJson(new JsonSlurper().parse(file, 'UTF-8')))
        }
    }
}

// When using "Run using IntelliJ" (the only option with well-working hotswapping) the used "resources" directory is
// different from the one used by gradle/the processResources task
task copyModsTomlForIntelliJ(type: Copy) {
    from processResources.destinationDir
    into "$projectDir/out/production/resources"
    include "META-INF/mods.toml"
}

copyModsTomlForIntelliJ.dependsOn processResources

minecraft {
    mappings channel: 'parchment', version: "$version_parchment-$version_minecraft"
    accessTransformers {
        file('src/main/resources/META-INF/accesstransformer.cfg')
    }
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'SCAN'
            property 'forge.enabledGameTestNamespaces', 'immersiveenergy'
            property 'forge.logging.console.level', 'debug'
            jvmArgs = [
                    '--add-opens=java.base/java.lang=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens=java.base/java.io=ALL-UNNAMED',
                    '--add-opens=java.base/java.net=ALL-UNNAMED',
                    '--add-opens=java.base/java.nio=ALL-UNNAMED',
                    '--add-opens=java.base/java.util=ALL-UNNAMED',
                    '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
                    '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
                    '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
                    '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
                    '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
                    '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
                    '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
            ]
            ideaModule project.name + ".main"
            mods {
                immersivetechnology { source sourceSets.main }
            }
        }
        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', ''
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'immersivetechnology'
            arg '-nogui'
            jvmArgs = [
                    '--add-opens=java.base/java.lang=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens=java.base/java.io=ALL-UNNAMED',
                    '--add-opens=java.base/java.net=ALL-UNNAMED',
                    '--add-opens=java.base/java.nio=ALL-UNNAMED',
                    '--add-opens=java.base/java.util=ALL-UNNAMED',
                    '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
                    '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
                    '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
                    '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
                    '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
                    '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
                    '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
            ]
            mods {
                immersivetechnology { source sourceSets.main }
            }
        }
        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', ''
            property 'forge.logging.console.level', 'debug'
            property 'fml.earlyprogresswindow', 'false'
            args '--mod', 'immersivetechnology', '--all', '--output', file('src/generated/resources/'), '--validate',
                    '--existing', sourceSets.main.resources.srcDirs[0]
            jvmArgs = [
                    '--add-opens=java.base/java.lang=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens=java.base/java.io=ALL-UNNAMED',
                    '--add-opens=java.base/java.net=ALL-UNNAMED',
                    '--add-opens=java.base/java.nio=ALL-UNNAMED',
                    '--add-opens=java.base/java.util=ALL-UNNAMED',
                    '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
                    '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
                    '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
                    '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
                    '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
                    '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
                    '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
            ]
            ideaModule project.name + ".datagen"
            mods {
                immersivetechnology {
                    source sourceSets.main
                    source sourceSets.datagen
                }
            }
        }
        gameTestServer {
            workingDirectory project.file('run')
            property 'forge.logging.markers', ''
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'immersivetechnology'
            jvmArgs = [
                    '--add-opens=java.base/java.lang=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens=java.base/java.io=ALL-UNNAMED',
                    '--add-opens=java.base/java.net=ALL-UNNAMED',
                    '--add-opens=java.base/java.nio=ALL-UNNAMED',
                    '--add-opens=java.base/java.util=ALL-UNNAMED',
                    '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
                    '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
                    '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
                    '--add-opens=java.base/sun.nio.cs=ALL-UNNAMED',
                    '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
                    '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
                    '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
            ]
            ideaModule project.name + ".gametest"
            mods {
                immersivetechnology {
                    source sourceSets.main
                    source sourceSets.gametest
                }
            }
        }
    }
}

repositories {
    maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { // JEI & BlockModelSplitter
        name 'Jared maven'
        url 'https://maven.blamejared.com/'
    }
    maven {
        // tfc
        url = 'https://www.cursemaven.com'
        content {
            includeGroup "curse.maven"
        }
    }
    maven {//Curse maven, in case some other maven goes offline and for mods that don't have a maven
        url "https://cfa2.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven { // CC-Tweaked
        url 'https://squiddev.cc/maven/'
        content {
            includeGroup("cc.tweaked")
            includeModule("org.squiddev", "Cobalt")
        }
    }
    maven {
        name 'ParchmentMC'
        url 'https://ldtteam.jfrog.io/artifactory/parchmentmc-public/'
    }
}

mixin {
    add sourceSets.main, "${modid}.refmap.json"
    config "mixins.${modid}.json"
}

project.ext.lwjglVersion = "3.3.6"
project.ext.lwjglNatives = "natives-linux"
dependencies {
    minecraft "net.minecraftforge:forge:${version_minecraft}-${version_forge}"

    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${version_jei}")
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${version_jei}")

    implementation fg.deobf("mezz.jei:jei-1.20.1-forge:${version_jei}")

    implementation fg.deobf("curse.maven:immersive-engineering-231951:6206989")
    implementation fg.deobf("curse.maven:immersive-geology-370614:6411647")

    implementation fg.deobf("curse.maven:jade-324717:6271651")

    datagenImplementation("blusunrize.immersiveengineering:ImmersiveEngineering:${version_ie}:datagen")

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    // Ad Astra
//    implementation fg.deobf("curse.maven:resourceful-config-714059:5020441")
//    implementation fg.deobf("curse.maven:botarium-704113:5486070")
//    implementation fg.deobf("curse.maven:resourceful-lib-570073:5568216")
//    implementation fg.deobf("curse.maven:ad-astra-635042:4894852")
    // Quark
//    implementation fg.deobf("curse.maven:zeta-968868:5597406")
//    implementation fg.deobf("curse.maven:quark-243121:5594847")
//
    // BoP
//    implementation fg.deobf("curse.maven:terrablender-563928:5068218")
//    implementation fg.deobf("curse.maven:biomes-o-plenty-220318:4617259")
    // TFC
//    implementation fg.deobf("vazkii.patchouli:Patchouli:$version_minecraft-$version_patchouli-FORGE")
//    implementation fg.deobf("curse.maven:terrafirmacraft-302973:5943050")
}

def customGradle = rootProject.file('custom.gradle');
if (customGradle.exists()) {
    apply from: customGradle;
}

task signJar(type: SignJar) {
    onlyIf {
        project.hasProperty('keyStore')
    }
    if (project.hasProperty('keyStore')) {
        keyStore = project.keyStore
        alias = project.storeAlias
        storePass = project.storePass
        keyPass = project.storePass
        inputFile = shadowJar.archiveFile
        outputFile = shadowJar.archiveFile
    } else {
        logger.warn("No key store found, not signing the output jar\n")
    }
}

build.dependsOn signJar

task datagenJar(type: Jar, dependsOn: datagenClasses) {
    archiveClassifier = 'datagen'
    from sourceSets.datagen.output
    manifest {
        attributes "FMLModType": "GAMELIBRARY"
    }
}

task sourcesJar(type: Jar, dependsOn: classes) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
    from sourceSets.datagen.allSource
}

artifacts {
    archives sourcesJar
    archives datagenJar
}

//Minimize/optimize all png files, requires optipng on the PATH
// Credits: BrainStone
void minimizePNGFile(File file) {
    long size = file.length()
    exec {
        executable "optipng"
        args "-q", "-o7", "-zm1-9", "-strip", "all", file
    }
    long newSize = file.length()
    if (newSize < size) {
        System.out.format("Reduced File size of %s from %d bytes to %d bytes (reduced by %.2f%%)\n",
                file, size, newSize, ((double) (size - newSize)) / ((double) size) * 100.0)
    }
}

task optimizePng {
    def pngPatterns = ["**/*.png"]
    doLast {
        //Ensure the logo is minimized (we add this file to each jar)
        //Minimize any PNGs in the source sets
        for (dir in sourceSets.main.resources.srcDirs) {
            fileTree(dir: dir, includes: pngPatterns).each { minimizePNGFile(it) }
        }
    }
}

// Running this is equivalent to running genIntellijRuns, but it exists before afterEvaluate
task genIntellijRunsDummy {}

task speedUpPreRun {
    doLast {
        for (String s : new String[]{"Client", "Server", "Data"}) {
            ant.replace(
                    file: ".idea/runConfigurations/run"+s+".xml",
                    // prepareRunX is prepareRuns + compile, but compiling is already handled by IntelliJ
                    token: "prepareRun"+s,
                    value: "prepareRuns"
            )
        }
    }
}

tasks.withType(Task) {
    if (it.name == "genIntellijRuns") {
        it.finalizedBy speedUpPreRun
        genIntellijRunsDummy.dependsOn it
    } else if (it.name == "runServer") {
        it.standardInput = System.in
    }
}

idea.project.settings.taskTriggers {
    afterSync genIntellijRunsDummy
}
